--- a/package.json
+++ b/package.json
@@ -50,15 +50,15 @@
     "@argent/smartwallet-utils": "^0.0.12",
     "@babel/plugin-transform-react-jsx": "^7.14.5",
     "@download/blockies": "^1.0.3",
-    "@pooltogether/bnc-onboard": "1.34.1-i",
-    "@pooltogether/bnc-onboard-hooks": "^1.0.4",
+    "@pooltogether/bnc-onboard": "1.36.0-b",
+    "@pooltogether/bnc-onboard-hooks": "^1.1.0",
     "@pooltogether/current-pool-data": "3.5.14",
     "@pooltogether/etherplex": "^1.1.1",
     "@pooltogether/evm-chains-extended": "^0.6.4-beta.1",
-    "@pooltogether/hooks": "^1.4.3",
+    "@pooltogether/hooks": "^1.4.6",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^1.6.6",
-    "@pooltogether/utilities": "^0.3.5",
+    "@pooltogether/react-components": "^1.6.10",
+    "@pooltogether/utilities": "^0.3.6",
     "@pooltogether/v4-js-client": "^0.9.6",
     "@pooltogether/v4-pool-data": "^1.1.0",
     "@reach/dialog": "^0.15.3",
