--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@pooltogether/react-components": "^1.6.7",
     "@pooltogether/utilities": "^0.3.5",
     "@pooltogether/v4-js-client": "^0.9.6",
-    "@pooltogether/v4-pool-data": "^1.4.0",
+    "@pooltogether/v4-pool-data": "^1.5.0-beta.2",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
