--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,8 @@
 name: Release
-on: 
+on:
   # Triggers the workflow on push but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -17,13 +17,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # - name: Bump version and push tag
-      #   id: github_tag_action
-      #   uses: mathieudutour/github-tag-action@331898d5052eedac9b15fec867b5ba66ebf9b692
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     release_branches: .*
-      #     default_bump: false
+      - name: Bump version and push tag
+        id: github_tag_action
+        uses: mathieudutour/github-tag-action@331898d5052eedac9b15fec867b5ba66ebf9b692
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          release_branches: .*
+          default_bump: false
 
   release:
     name: Release new code
@@ -59,39 +59,40 @@ jobs:
         with:
           cidv0: ${{ steps.upload.outputs.hash }}
 
-  #     - name: Update DNS with new IPFS hash
-  #       env:
-  #         CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-  #         RECORD_DOMAIN: 'pooltogether.com'
-  #         RECORD_NAME: '_dnslink.app'
-  #         CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-  #       uses: textileio/cloudflare-update-dnslink@0fe7b7a1ffc865db3a4da9773f0f987447ad5848
-  #       with:
-  #         cid: ${{ steps.upload.outputs.hash }}
+      - name: Update DNS with new IPFS hash
+        env:
+          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+          RECORD_DOMAIN: 'pooltogether.com'
+          RECORD_NAME: '_dnslink.decent-test'
+        uses: textileio/cloudflare-update-dnslink@0fe7b7a1ffc865db3a4da9773f0f987447ad5848
+        with:
+          cid: ${{ steps.upload.outputs.hash }}
 
-  #     - name: Create GitHub Release
-  #       id: create_release
-  #       uses: actions/create-release@v1.1.0
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       with:
-  #         tag_name: ${{ needs.bump_version.outputs.new_tag }}
-  #         release_name: Release ${{ needs.bump_version.outputs.new_tag }}
-  #         body: |
-  #           IPFS hash of the deployment:
-  #           - CIDv0: `${{ steps.upload.outputs.hash }}`
-  #           - CIDv1: `${{ steps.convert_cidv0.outputs.cidv1 }}`
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1.1.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ needs.bump_version.outputs.new_tag }}
+          release_name: Release ${{ needs.bump_version.outputs.new_tag }}
+          body: |
+            IPFS hash of the deployment:
+            - CIDv0: `${{ steps.upload.outputs.hash }}`
+            - CIDv1: `${{ steps.convert_cidv0.outputs.cidv1 }}`
 
-  #           The latest release is always accessible via our alias to the Cloudflare IPFS gateway at [app.pooltogether.com](https://app.pooltogether.com).
+            The latest release is always accessible via our alias to the Cloudflare IPFS gateway at [v4.pooltogether.com](https://v4.pooltogether.com).
 
-  #           You can also access the PoolTogether UI directly from an IPFS gateway.
-  #           **BEWARE**: The PoolTogether interface uses [`localStorage`](https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage) to remember your settings, such as which tokens you have imported.
-  #           **You should always use an IPFS gateway that enforces origin separation**, or our alias to the latest release at [app.pooltogether.com](https://app.pooltogether.com).
-  #           Your Uniswap settings are never remembered across different URLs.
+            You can also access the PoolTogether UI directly from an IPFS gateway.
 
-  #           IPFS gateways:
-  #           - https://${{ steps.convert_cidv0.outputs.cidv1 }}.ipfs.dweb.link/
-  #           - https://${{ steps.convert_cidv0.outputs.cidv1 }}.ipfs.cf-ipfs.com/
-  #           - [ipfs://${{ steps.upload.outputs.hash }}/](ipfs://${{ steps.upload.outputs.hash }}/)
+            **BEWARE**: The PoolTogether interface uses cookies and [`localStorage`](https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage) to remember your settings, such as which wallet you have connected.
+            **You should always use an IPFS gateway that enforces origin separation**, or our alias to the latest release at [v4.pooltogether.com](https://v4.pooltogether.com).
+            Your PoolTogether settings are never remembered across different URLs.
 
-  #           ${{ needs.bump_version.outputs.changelog }}
+            IPFS gateways:
+            - https://${{ steps.convert_cidv0.outputs.cidv1 }}.ipfs.dweb.link/
+            - https://${{ steps.convert_cidv0.outputs.cidv1 }}.ipfs.cf-ipfs.com/
+            - [ipfs://${{ steps.upload.outputs.hash }}/](ipfs://${{ steps.upload.outputs.hash }}/)
+
+            ${{ needs.bump_version.outputs.changelog }}
