--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@ name: Release
 on:
   # Triggers the workflow on push but only for the main branch
   push:
-    branches: [ifps]
+    branches: [pool-1932-migrate-v4-to-ipfs-ethlink]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -64,7 +64,7 @@ jobs:
           CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
           CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
           RECORD_DOMAIN: 'pooltogether.com'
-          RECORD_NAME: '_dnslink.decent-test'
+          RECORD_NAME: '_dnslink.pooldev'
         uses: textileio/cloudflare-update-dnslink@0fe7b7a1ffc865db3a4da9773f0f987447ad5848
         with:
           cid: ${{ steps.upload.outputs.hash }}
