--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,6 +28,7 @@ jobs:
   release:
     name: Release new code
     runs-on: ubuntu-latest
+    needs: bump_version
     steps:
       - name: Checkout
         uses: actions/checkout@v2
