--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "export": "next export",
     "distrelease": "export NEXT_PUBLIC_RELEASE_VERSION=$(sentry-cli releases propose-version) && yarn dist && yarn sentryrelease",
     "sentryrelease": "./scripts/sentry-release.sh",
-    "start": "yarn start",
+    "start": "next start",
     "test": "jest",
     "testcov": "jest --coverage --coverageDirectory=coverage && open ./coverage/index.html",
     "watch": "yarn run test --watch"
