--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "@pooltogether/bnc-onboard": "1.36.0-b",
     "@pooltogether/bnc-onboard-hooks": "^1.1.1",
     "@pooltogether/current-pool-data": "^3.7.2",
+    "@pooltogether/draw-calculator-js": "^1.0.3-beta.4",
     "@pooltogether/etherplex": "^1.1.4",
     "@pooltogether/evm-chains-extended": "^0.6.4-beta.1",
     "@pooltogether/hooks": "^1.5.1",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/react-components": "^1.6.30",
     "@pooltogether/utilities": "^0.3.8",
-    "@pooltogether/v4-js-client": "^0.9.7",
+    "@pooltogether/v4-client-js": "^0.10.2",
     "@pooltogether/v4-pool-data": "^1.6.0",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
