--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/react-components": "^1.6.30",
     "@pooltogether/utilities": "^0.3.8",
-    "@pooltogether/v4-client-js": "file:.yalc/@pooltogether/v4-client-js",
+    "@pooltogether/v4-client-js": "^0.11.0",
     "@pooltogether/v4-pool-data": "^1.6.0",
-    "@pooltogether/v4-utils-js": "file:.yalc/@pooltogether/v4-utils-js",
+    "@pooltogether/v4-utils-js": "^0.1.3",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
