--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@pooltogether/utilities": "^0.3.9",
     "@pooltogether/v4-client-js": "^0.11.0",
     "@pooltogether/v4-pool-data": "^1.6.0",
+    "@pooltogether/v4-twab-delegator-js": "^0.1.0",
     "@pooltogether/v4-utils-js": "^0.1.3",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
