--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@pooltogether/react-components": "^1.9.0",
     "@pooltogether/utilities": "^0.3.9",
     "@pooltogether/v4-client-js": "^0.12.0",
-    "@pooltogether/v4-pool-data": "^1.6.0",
+    "@pooltogether/v4-pool-data": "1.7.0-beta.1",
     "@pooltogether/v4-twab-delegator-js": "^0.1.0",
     "@pooltogether/v4-utils-js": "^0.1.3",
     "@reach/dialog": "^0.15.3",
