--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@pooltogether/current-pool-data": "^3.7.2",
     "@pooltogether/etherplex": "^1.1.4",
     "@pooltogether/evm-chains-extended": "^0.6.4-beta.1",
-    "@pooltogether/hooks": "^1.5.1",
+    "@pooltogether/hooks": "^1.5.2",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/react-components": "^1.9.0",
     "@pooltogether/utilities": "^0.3.9",
@@ -47,6 +47,7 @@
     "@reach/visually-hidden": "^0.15.2",
     "@sentry/react": "^6.17.5",
     "@sentry/tracing": "^6.17.5",
+    "@svgr/webpack": "^6.2.1",
     "@uniswap/widgets": "^0.0.25-beta",
     "autoprefixer": "^10.3.1",
     "beautiful-react-hooks": "^1.0.2",
